# cppjieba-cabi

./: .travis.yml  CMakeLists.txt  README.md  demo.c
include/: jieba.h
lib/: jieba.cc
